CMAKE_MINIMUM_REQUIRED(VERSION 3.18.6)

PROJECT(PSGE)
MESSAGE("Configuring ${PROJECT_NAME}")
FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets REQUIRED)

# IF(NOT Qt5Core_FOUND)
   # MESSAGE(FATAL_ERROR "Qt MUST be in the Path environment variable!")
# ENDIF()

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FILE(GLOB SOURCE *.cpp)
FILE(GLOB HEADERS *.h *.hpp )
FILE(GLOB UI *.ui)
FILE(GLOB RES *.qrc)

IF(WIN32)
   MESSAGE("Setting for Windows environment.")
   ADD_EXECUTABLE(${PROJECT_NAME} WIN32 ${SOURCE} ${HEADERS} ${UI} ${RES})
ELSE()
   ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE} ${HEADERS} ${UI} ${RES})
ENDIF()
TARGET_LINK_LIBRARIES(${PROJECT_NAME} Qt5::Widgets Qt5::Xml)
INCLUDE_DIRECTORIES(${INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
